@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-24
-Date: 2009-04-06
+Date: 2009-04-07
 Priority: Recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
