@@ -72,8 +72,11 @@ stopifnot(!isTRUE(all.equal.default(m1, m2)),
 ### -> error/warning condition for solve() of a singular matrix (Barry Rowlingson)
 (M <- Matrix(0+ 1:16, nc = 4))
 tt <- try(solve(M))## -> an error + a warning about singularity -- and caches the LU decomp
+options(warn=2) # no more warnings allowed from here
+lum <- lu(M, warnSing=FALSE)
 stopifnot(inherits(tt, "try-error"),
-          is(fLU <- M@factors $ LU, "MatrixFactorization"))
+          is(fLU <- M@factors $ LU, "MatrixFactorization"),
+          identical(lum, fLU))
 (e.lu <- expand(fLU))
 M2 <- with(e.lu, P %*% L %*% U)
 assert.EQ.mat(M2, as(M, "matrix"))
